@@ -21,14 +21,18 @@ import java.io.IOException;
 
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FSDataOutputStream;
+import org.apache.hadoop.fs.FileAlreadyExistsException;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
 import org.apache.lucene.store.Lock;
 import org.apache.lucene.store.LockFactory;
 import org.apache.lucene.store.LockReleaseFailedException;
 import org.apache.solr.util.IOUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class HdfsLockFactory extends LockFactory {
+  public static Logger log = LoggerFactory.getLogger(HdfsLockFactory.class);
   
   private Path lockPath;
   private Configuration configuration;
@@ -98,9 +102,14 @@ public class HdfsLockFactory extends LockFactory {
       FileSystem fs = null;
       try {
         fs = FileSystem.newInstance(lockPath.toUri(), conf);
-        
+        if (!fs.exists(lockPath)) {
+          fs.mkdirs(lockPath);
+        }
         file = fs.create(new Path(lockPath, lockName), false);
-      } catch (IOException e) {
+      } catch (FileAlreadyExistsException e) { 
+        return false;
+      }catch (IOException e) {
+        log.error("Error creating lock file", e);
         return false;
       } finally {
         IOUtils.closeQuietly(file);
